--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display PDF</title>
+    <title>CV</title>
 </head>
 <body>
-    <embed src="https://github.com/mdisorbo1/resume/blob/main/CV.pdf" type="application/pdf" width="100%" height="600px">
+    <embed src="CV.pdf" type="application/pdf" width="100%" height="600px">
 </body>
 </html>
