--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>CV</title>
 </head>
 <body>
-    <embed src="asfk.pdf" type="application/pdf" width="100%" height="700px">
+    <embed src="CV.pdf" type="application/pdf" width="100%" height="700px">
 </body>
 </html>
